# Automatic-Secret-Rotation

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  SECURITY.md  USAGE.md  install.sh
.devcontainer/: devcontainer.json  install-vault.sh
.github/workflows/: build-release-binary.yml  release.yml  test.yml
examples/: Jenkinsfile  config-production.toml  config.toml  github-actions.yml  gitlab-ci.yml  rotator-config.toml
src/: cli.rs  config.rs  env_updater.rs  lib.rs  main.rs  rotation.rs  vault.rs
src/backends/: aws_secrets.rs  file.rs  mod.rs  secret_backend.rs  vault.rs
src/targets/: api.rs  mod.rs  postgres.rs  target.rs
